<resources>
    <string name="app_name">Gymlog</string>
    <string name="new_movement">New Exercise:</string>
    <string name="btn_end_week">End Week</string>
    <string name="btn_end_day">End Day</string>
    <string name="btn_next_move">Next</string>
    <string name="week_plan_title">Create Workout Plan</string>
    <string name="w_name">Plan Name</string>
    <string name="w_continue">Continue</string>
    <string name="w_warning">Continuing will delete your previous plan*</string>
    <string name="m_name">Name</string>
    <string name="m_sets">Sets</string>
    <string name="m_reps">Reps</string>
    <string name="m_weight">Weight</string>
    <string name="m_duration">Duration</string>
    <string name="weight">Weight</string>
    <string name="sleep">Sleep</string>
    <string name="performance">Workout score</string>
    <string name="doneButton">Workout done</string>
    <string name="deleteSleepButton">Delete Sleep Data</string>
    <string name="deleteWeightButton">Delete Weight Data</string>
    <string name="weight_this_morning">Weight this morning (kg)</string>
    <string name="save_weight">Save</string>
    <string name="gain_lose_weight">Gain/Lose Weight</string>
    <string name="hours_slept">Hours slept last night</string>
    <string name="minus_sleep">-</string>
    <string name="plus_sleep">+</string>
    <string name="current_program">Current Program:</string>
    <string name="total_points_earned">Total points earned:</string>
</resources>
