<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6D7D7"
    tools:context=".ProgressionGraphActivity">

    <!--Author
    Niklas Malmgren-->

    <!--
        Graphview
    -->

    <com.jjoe64.graphview.GraphView
        android:id="@+id/GraphView"
        android:layout_width="379dp"
        android:layout_height="586dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="145dp"
        android:layout_marginBottom="0dp" />

    <!--
    Radiobuttons to switch between sleep, weight and workoutscore graphs
    -->

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">

        <RadioButton
            android:id="@+id/performanceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonPressed"
            android:text="@string/performance" />

        <RadioButton
            android:id="@+id/sleepButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonPressed"
            android:text="@string/sleep"/>

        <RadioButton
            android:id="@+id/weightButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="buttonPressed"
            android:text="@string/weight" />

    </RadioGroup>

</RelativeLayout>