<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6D7D7"
    tools:context=".NameWeek">

    <!--
        Title for activity
    -->
    <TextView
        android:id="@+id/namingTitle"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/week_plan_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--
        Layout for week plan name input
    -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameWeekInputLayout"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/w_name"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:endIconMode="clear_text"
        app:helperText="required*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namingTitle"
        app:startIconDrawable="@drawable/name">

        <!--
            EditText field for week plan name
        -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameWeekInput"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="16"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--
        Button to continue
    -->
    <Button
        android:id="@+id/btnContinue"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/gymlog_turq"
        android:clickable="true"
        android:onClick="planWeekButton"
        android:text="@string/w_continue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameWeekInputLayout"
        tools:ignore="TextContrastCheck" />

    <!--
        Warning
    -->
    <TextView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/w_warning"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnContinue" />

</androidx.constraintlayout.widget.ConstraintLayout>